--- a/public/index.html
+++ b/public/index.html
@@ -3,31 +3,45 @@
   <head>
     <meta charset="utf-8">
     <title>GYH - Booking App</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+    <style>
+    .pure-button{
+      margin: 0 2px;
+    }
+    ul li{
+      list-style: none;
+      margin-bottom: 15px;
+    }
+    </style>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.0/angular.min.js"></script>
     <script src="script.js"></script>
   </head>
-  <body>
+  <body style="padding: 10px">
     <h1>GYH - Booking App</h1>
-    <div ng-controller="BookingController">
-      <label>Booking Duration: </label>
-      <input type="number" min="1" step="1" value="1" ng-model="bookingDuration" style="width: 50px" /> hours
-      <br />
-      <label>Repeating every: </label>
-      <input type="number" min="0" step="1" value="1" ng-model="bookingRecurrence" style="width: 50px" /> days
-      <br />
-      <button ng-click="checkAvailability()">Get Availability</button>
-      <hr />
-      <div>
-        <ul>
-          <li ng-repeat="day in availableTimings">
-            <div>{{ day.date }}</div>
-            <div>
-              <button ng-repeat="timing in day.timings">{{ displayFriendlyTime(timing) }}</button>
-            </div>
-          </li>
-        </ul>
-      </div>
+    <div class="pure-g">
+      <div class="pure-u-1-1">
+        <div ng-controller="BookingController" class="pure-form">
+          <p>
+            <label>Booking Duration: </label>
+            <input type="number" min="1" step="1" value="1" ng-model="bookingDuration" style="width: 50px" /> hours
+          </p><p>
+          <label>Repeating every: </label>
+          <input type="number" min="0" step="1" value="1" ng-model="bookingRecurrence" style="width: 50px" /> days
+          </p>
+          <button ng-click="checkAvailability()" class="pure-button pure-button-primary">Get Availability</button>
+          <hr />
+          <div>
+            <ul>
+              <li ng-repeat="day in availableTimings">
+                <div>{{ day.date }}</div>
+                <div>
+                  <button ng-repeat="timing in day.timings" ng-click="createBooking(timing)" class="pure-button">{{ displayFriendlyTime(timing) }}</button>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+        </div>
     </div>
   </body>
 </html>
